--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<script src="./node_modules/steal/steal.js" 
-		main="index"></script>
+<script src="./node_modules/steal/steal.js" main="index"></script>
